usrot skip oneflow

--- a/onediff_diffusers_extensions/examples/notebooks/text_to_image.ipynb
+++ b/onediff_diffusers_extensions/examples/notebooks/text_to_image.ipynb
@@ -10,7 +10,7 @@
     "from onediff.infer_compiler import oneflow_compile\n",
     "from onediff.schedulers import EulerDiscreteScheduler\n",
     "from diffusers import StableDiffusionPipeline\n",
-    "import oneflow as flow\n",
+    "import oneflow as flow  # usort: skip\n",
     "import torch"
    ]
   },
